--- a/index.html
+++ b/index.html
@@ -18,20 +18,21 @@
   <div class="container">
     <h1>Funcionários</h1>
 
-    <form>
-      
+    <form class="was-validated">
+
       <div class="row">
         <div class="col-md">
           <div class="mb-3">
             <label class="form-label">Funcionário</label>
-            <input type="text" class="form-control" name="funcionario" placeholder="Nome do Colaborador" required>
+            <input type="text" class="form-control" name="funcionario" placeholder="Nome do colaborador" required>
+            </Funcionário>
           </div>
         </div>
 
         <div class="col-md">
           <div class="mb-3">
             <label class="form-label">Data de Contratação</label>
-            <input type="date" name="dtContratacao" class="form-control">
+            <input type="date" name="dtContratacao" class="form-control" placeholder="" required></Funcionário>
           </div>
         </div>
       </div>
@@ -40,28 +41,28 @@
         <div class="col-md">
           <div class="mb-3">
             <label class="form-label">Endereço</label>
-            <input type="text" name="endereco" class="form-control">
+            <input type="text" name="endereco" class="form-control" placeholder="Rua" required></Funcionário>
           </div>
         </div>
 
         <div class="col-md">
           <div class="mb-3">
             <label class="form-label">Complemento</label>
-            <input type="text" name="complemento" class="form-control">
+            <input type="text" name="complemento" class="form-control" placeholder="Residência" required></Funcionário>
           </div>
         </div>
 
         <div class="col-md">
           <div class="mb-3">
             <label class="form-label">Cidade</label>
-            <input type="text" name="cidade" class="form-control">
+            <input type="text" name="cidade" class="form-control" placeholder="São Paulo" required></Funcionário>
           </div>
         </div>
 
         <div class="col-md">
           <div class="mb-3">
             <label class="form-label">Bairro</label>
-            <input type="text" name="bairro" class="form-control">
+            <input type="text" name="bairro" class="form-control" placeholder="Av" required></Funcionário>
           </div>
         </div>
       </div>
@@ -70,21 +71,25 @@
         <div class="col-md">
           <div class="mb-3">
             <label class="form-label">Login</label>
-            <input type="email" name="login" class="form-control">
+            <input type="email" name="login" class="form-control" placeholder="E-mail" required></Funcionário>
           </div>
         </div>
 
         <div class="col-md">
           <div class="mb-3">
             <label class="form-label">Senha</label>
-            <input type="password" name="senha" class="form-control">
+            <input type="password" name="senha" class="form-control" placeholder="Passaword" required></Funcionário>
           </div>
         </div>
       </div>
 
-      <div class="form-group form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
+      <div class="form-group">
+        <div class="form-check">
+          <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3" required>
+          <label class="form-check-label" for="invalidCheck3">
+            Concordo com os termos e condições
+          </label>
+        </div>
       </div>
 
       <button type="submit" class="btn btn-primary">Enviar</button>
