--- a/index.html
+++ b/index.html
@@ -10,10 +10,29 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <title>Olá, mundo!</title>
+  <title>Funcionario</title>
 </head>
 
 <body>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#"><img src="img/bootstrap-solid.svg" alt="Logo" width="30"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active"></li>
+          <a class="nav-link" href="index.html">Funcionário<span class="sr-only">(Página atual)</span></a>
+        </li>
+        <li class="nav-item"></li>
+          <a class="nav-link" href="departamento.html">Departamento</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
   <div class="container">
     <h1>Funcionários</h1>
